<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        app:showAsAction="never"
        android:title="Home"/>
    <item
        android:id="@+id/nav_walking"
        android:icon="@drawable/icon_andar"
        app:showAsAction="never"
        android:title="@string/andar"/>
    <item
        android:id="@+id/nav_bus"
        android:icon="@drawable/icon_bus"
        app:showAsAction="never"
        android:title="@string/bus"/>
    <item
        android:id="@+id/nav_bizi"
        android:icon="@drawable/icon_bici"
        app:showAsAction="never"
        android:title="@string/bici"/>
    <item
        android:id="@+id/nav_profile"
        app:showAsAction="never"
        android:icon="@drawable/icon_perfil"
        android:title="Perfil"/>
</menu>